WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213481
WebEx can not share video from Safari on arm64
https://bugs.webkit.org/show_bug.cgi?id=213481
Summary
WebEx can not share video from Safari on arm64
Tim Horton
Reported
2020-06-22 12:43:26 PDT
WebEx can not share video from Safari on arm64
Attachments
Patch
(4.84 KB, patch)
2020-06-22 12:43 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-06-22 12:43:56 PDT
Created
attachment 402500
[details]
Patch
Tim Horton
Comment 2
2020-06-22 13:07:35 PDT
This one has a dependency so it won't build yet.
EWS
Comment 3
2020-06-22 15:25:47 PDT
Committed
r263373
: <
https://trac.webkit.org/changeset/263373
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402500
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-06-22 15:26:19 PDT
<
rdar://problem/64611028
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug