WebEx can not share video from Safari on arm64 https://bugs.webkit.org/show_bug.cgi?id=213481

Reviewed by Dean Jackson.

* UIProcess/UserMediaProcessManager.cpp:
(WebKit::needsAppleCameraService):
(WebKit::UserMediaProcessManager::willCreateMediaStream):
(WebKit::UserMediaProcessManager::revokeSandboxExtensionsIfNeeded):
Pass sandbox extension for "com.apple.applecamerad" to the Web Content
process after the user allows camera access, when running on hardware which requires it.

* WebProcess/com.apple.WebProcess.sb.in:
Make it possible to dynamically extend the sandbox as above.


Canonical link: https://commits.webkit.org/226279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263373 268f45cc-cd09-0410-ab3c-d52691b4dbfc